steel supply ajax RWD

--- a/web/consulting.html
+++ b/web/consulting.html
@@ -145,7 +145,9 @@
                         <p>As multi-disciplined Engineering Consulting firm, we serve a variety of projects in the real estate industry. We are committed to delivering excellence to our clients by maintaining the highest standards of quality.</p>
                         <p>Our team looks beyond conventional services by adding value at every step of the project and thereby enabling us to move ahead of competition. Our value-adds are proposed as an advantage to both the developers and the future occupants of the project.</p>
 
-<b>consultant= Harshil Ranbhan (civil engineer)</b></p>
+                        <b>Consultant :</b></p>
+                        <p><b>Harshil Ranbhan civil engineer</b></p>
+                        <p><b>Civil Engineer</b></p>
                     </div>
                 </div>
             </div>
