--- a/web/consulting.html
+++ b/web/consulting.html
@@ -15,9 +15,15 @@
             background-color: #fff;
             z-index: 9999;
         }
+        a{
+            text-decoration: none;
+        }
     </style>
     <link rel="stylesheet" type="text/css" href="./css/uniform.css" />
+    <link rel="stylesheet" type="text/css" href="./css/radio.css" />
     <link rel="stylesheet/less" type="text/css" href="./css/uniform.less" />
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -73,7 +79,7 @@
                     </ul>-->
                 </li>
                 <li class="page-scroll menu-item menu-item-has-children">
-                    <a href="index.jsp#services">Services</a>
+                    <a href="index.jsp#services" >Services</a>
                     <ul class="sub-menu">
                         <li class="menu-item"><a href="steelsupply.jsp">Steel Supply</a></li>
                         <li class="menu-item"><a href="cementsupply.jsp">Cement Supply</a></li>
@@ -105,12 +111,37 @@
         </nav>
     </div>
 </header>
+    
+<!-- SLIDER -->
+<section id="home-slider">
+    <div id="owl-main" class="owl-carousel">
+        <div class="item item_consult1">
+            <div class="overlay"></div>
+        </div>
+        <div class="item item_consult2">
+            <div class="overlay"></div>
+        </div>
+        <div class="item item_consult3">
+            <div class="overlay"></div>
+        </div>
+    </div>
+    <div class="slide-content">
+        <div class="title light">
+        <h1 class="light fz70">Consultancy</h1>
+        <h2 class="light fz24">We consult about everything you want to Build.</h2>
+        </div>  
+    </div>
+    <div class="scroll"><span></span></div>
+</section>
+<!-- END SLIDER -->    
+    
+<!-- old cover
 <div class="page-header single consulting" style="height: 650px; background-image:demo/learn-more/consulting/slider.jpg">
     <div class="title light">
         <h1 class="light fz70">Consultancy</h1>
         <h2 class="light fz24">We've got everything you want for consultations</h2>
     </div>
-</div>
+</div> -->
 
 <section class="blog single">
     <!-- <span class="prev-post"><a href="./general-contracting.html">Prev</a></span>
@@ -125,6 +156,9 @@
                         </div>
                         <div class="item">
                             <img src="./demo/learn-more/consulting/02.jpg" alt="" class="img-responsive" />
+                        </div>
+                        <div class="item">
+                            <img src="./demo/learn-more/consulting/06.jpg" alt="" class="img-responsive" />
                         </div>
                     </div>
                 </div>
@@ -146,7 +180,7 @@
                         <p>Our team looks beyond conventional services by adding value at every step of the project and thereby enabling us to move ahead of competition. Our value-adds are proposed as an advantage to both the developers and the future occupants of the project.</p>
 
                         <b>Consultant :</b></p>
-                        <p><b>Harshil Ranbhan civil engineer</b></p>
+                        <p><b>Harshil Ranbhan</b></p>
                         <p><b>Civil Engineer</b></p>
                     </div>
                 </div>
