--- a/web/consulting.html
+++ b/web/consulting.html
@@ -174,14 +174,17 @@
                         <p> Our experts possess decades of engineering and construction experience and apply this knowledge to the everyday challenges that owners, contractors, engineers, and architects face throughout the construction process. Depending on your specific project needs and requirements, Parth Steels provides the following construction consulting services:-</p>
                         <p>1.Construction Management</p>
                         <p>2.Scheduling</p>
-                        <p>3.Cost Estimating</p>
+                        <p>3.Valuation</p>
+                        <p>4.Planning</p>
+                        <p>5.Structure Design</p>
+                        <p>6.Interior Design</p>
                         <p>Parth Steels is a consulting firm that provides professional services to companies within the Real Estate Industry.We aim to serve a wide range of industries and construction projects countrywide & globally. Parth Steels solves and simplifies complex problems to help our clients build projects with a peace of mind.</p>
                         <p>As multi-disciplined Engineering Consulting firm, we serve a variety of projects in the real estate industry. We are committed to delivering excellence to our clients by maintaining the highest standards of quality.</p>
                         <p>Our team looks beyond conventional services by adding value at every step of the project and thereby enabling us to move ahead of competition. Our value-adds are proposed as an advantage to both the developers and the future occupants of the project.</p>
 
                         <b>Consultant :</b></p>
                         <p><b>Harshil Ranbhan</b></p>
-                        <p><b>Civil Engineer</b></p>
+                        <p><b>Civil Engineer</b> (M : 8866633546)</p>
                     </div>
                 </div>
             </div>
@@ -258,31 +261,30 @@
                 <div class="voffset30"></div>
                 <p class="block-title">Support</p>
                 <p class="subtitle light">We support 24/7, feel free to contact us anytime you need.We are here to help.</p>
+                <p class="block-title"><a href="steelsupply.jsp#tnc">Terms and Conditions for Steel</a></p>
+                <p class="block-title"><a href="cementsupply.jsp#tnc">Terms and Conditions for Cement</a></p>
             </div>
             <div class="col-md-6 col-lg-3">
-                <p class="block-title">contact info</p>
+                <p class="block-title">Contact Info</p>
                 <ul class="contact-info">
                     <li class="subtitle light"><i class="fa fa-building-o"></i> 13 Lati Plot, Opp. Dodiya Weigh Bridge,Kuwadva Road, Rajkot-3.</li>
-                    <li class="subtitle light"><i class="fa fa-phone"></i> 0281-8452699</li>
-                    <li class="subtitle light"><i class="fa fa-envelope-o"></i> support@parthsteel.com</li>
-                    <li class="subtitle light"><i class="fa fa-clock-o"></i> 8AM - 5 PM 7/365</li>
+                    <li class="subtitle light"><i class="fa fa-phone"></i> 0281-2452699</li>
+                    <li class="subtitle light"><i class="fa fa-envelope-o"></i> parthsteels123@gmail.com</li>
+                    <li class="subtitle light"><i class="fa fa-clock-o"></i> 8AM - 10 PM 7/365</li>
                 </ul>
             </div>
             <div class="col-md-6 col-lg-3">
-                <p class="block-title">we are social on</p>
+                <p class="block-title">We are social on</p>
                 <div class="row">
                     <div class="col-xs-4">
-                        <a href="www.facebook.com" class="social-icon"><i class="fa fa-facebook"></i></a>
-                        <span class="social-count">1K+</span>
-                    </div>
-                    <!-- <div class="col-xs-4">
-                        <a href="./index.jsp" class="social-icon"><i class="fa fa-twitter"></i></a>
-                        <span class="social-count">1K+</span>
+                        <a href="www.facebook.com/parthsteels123" class="social-icon"><i class="fa fa-facebook"></i></a>
                     </div>
                     <div class="col-xs-4">
-                        <a href="./index.jsp" class="social-icon"><i class="fa fa-instagram"></i></a>
-                        <span class="social-count">1K+</span> 
-                    </div>-->
+                        <a href="www.twitter.com/@parth_steels" class="social-icon"><i class="fa fa-twitter"></i></a>
+                    </div>
+                    <div class="col-xs-4">
+                        <a href="www.linkedin.com/in/parthsteels123" class="social-icon"><i class="fa fa-linkedin"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3">
