google map api key,deleted unnecessary files

--- a/web/consulting.html
+++ b/web/consulting.html
@@ -128,7 +128,7 @@
     <div class="slide-content">
         <div class="title light">
         <h1 class="light fz70">Consultancy</h1>
-        <h2 class="light fz24">We consult about everything you want to Build.</h2>
+        <h2 class="light fz24">Your Vision Our Expertise</h2>
         </div>  
     </div>
     <div class="scroll"><span></span></div>
@@ -261,6 +261,8 @@
                 <div class="voffset30"></div>
                 <p class="block-title">Support</p>
                 <p class="subtitle light">We support 24/7, feel free to contact us anytime you need.We are here to help.</p>
+                </div>
+            <div class="col-md-6 col-lg-3">
                 <p class="block-title"><a href="steelsupply.jsp#tnc">Terms and Conditions for Steel</a></p>
                 <p class="block-title"><a href="cementsupply.jsp#tnc">Terms and Conditions for Cement</a></p>
             </div>
@@ -274,7 +276,7 @@
                 </ul>
             </div>
             <div class="col-md-6 col-lg-3">
-                <p class="block-title">We are social on</p>
+                <p class="block-title">Follow Us On</p>
                 <div class="row">
                     <div class="col-xs-4">
                         <a href="http://www.facebook.com/parthsteels123" class="social-icon"><i class="fa fa-facebook"></i></a>
@@ -287,7 +289,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-3">
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-lg-12">
                 <div class="footer-posts">
                     <p class="block-title">Copyright © 2016 Parth Steels, IN. All Rights Reserved. Designed and Developed by <a href="http:\\www.fiverr.com\harshildave7" style="color: white">Harshil Dave</a>.</p>
                     <!-- <div class="footer-post">
@@ -333,7 +337,7 @@
 <script src="./js/jquery.validate.min.js"></script>
 <script src="./js/jquery.form.min.js"></script>
 <script src="./js/default.js"></script>
-<script src="http://maps.googleapis.com/maps/api/js"></script>
+<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAK1IzPnTIiw_7k0rOy41ShTZwCFON5WQY"></script>
 <script type="text/javascript" src="./js/google-map.js"></script>
 </body>
 </html>
